--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "aiku/php_sso",
+    "name": "a67793581/php_sso",
     "description": "This is a single sign on class written in PHP",
     "type": "library",
     "license": "MIT",
