--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "284474102@qq.com"
         }
     ],
-    "minimum-stability": "beta",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.3"
     },
