--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
     "require": {
         "php": ">=5.3"
     },
+    "require-dev": {
+        "php": ">=5.3"
+    },
     "autoload": {
         "psr-4": {
             "sso\\": "src/"
