--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,13 @@
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
+
+# composer忽略无关文件
+/.github            export-ignore
+/.gitignore         export-ignore
+/.scrutinizer.yml   export-ignore
+/.travis.yml        export-ignore
+
+/Demo               export-ignore
+/认证中心.png        export-ignore
+/认证中心.xmind      export-ignore
