--- a/.gitattributes
+++ b/.gitattributes
@@ -23,12 +23,8 @@
 /.gitignore export-ignore
 /.scrutinizer.yml export-ignore
 /.travis.yml export-ignore
+/.editorconfig export-ignore
 
-/ phpunit.xml export-ignore
-/ changelog.md export-ignore
-/ readme.md export-ignore
-
-/ tests export-ignore
-/ stubs export-ignore
-/ Demo export-ignore
-/ 认证中心.* export-ignore
+/README.md export-ignore
+/Demo export-ignore
+/认证中心.* export-ignore
