--- a/.gitattributes
+++ b/.gitattributes
@@ -16,7 +16,7 @@
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
 
-# composer忽略无关文件
+# composer 忽略无关文件  (export-ignore 意思是git压缩包 不加入这行内容)
 /.github export-ignore
 /.travis.yml export-ignore
 /.gitattributes export-ignore
@@ -25,6 +25,5 @@
 /.travis.yml export-ignore
 /.editorconfig export-ignore
 
-/README.md export-ignore
 /Demo export-ignore
 /认证中心.* export-ignore
